--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "browserSync.config":{
         "proxy": "localhost:5000",
         "files": ["Views/**/*.cshtml","wwwroot/**/*"]
-        }
+        },
+    "fontAwesomeAutocomplete.patterns": ["**/*.cshtml"],
+    "fontAwesomeAutocomplete.triggerWord": "f"
 }
