--- a/TestWeb1.csproj
+++ b/TestWeb1.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Microsoft.Data.SQLite" Version="3.1.4" />
   </ItemGroup>
 
